# asus-numpad

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
src/: config.rs  devices.rs  dummy_keyboard.rs  main.rs  numpad_layout.rs  touchpad_i2c.rs  util.rs
tools/: asus-numpad.service  enable_systemd.sh
