[package]
name = "asus-numpad"
version = "0.1.0"
authors = ["iamkroot <kroot.patel@gmail.com>"]
edition = "2021"
description = "Linux app to allow using the numpad that is overlayed on various Asus Laptop touchpads."
readme = "README.md"
repository = "https://github.com/iamkroot/asus-numpad"
keywords = ["asus", "numpad", "touchpad", "driver"]
categories = ["hardware-support", "os::linux-apis"]

[dependencies]
evdev-rs = "0.5.0"
